force-app/main/default/objects/copadoconnect__FieldMapping__c/copadoconnect__FieldMapping__c.object-meta.xml
<CustomObject>
    <label>Field Mapping</label>
    <nameField>
        <displayFormat>FM-{0000}</displayFormat>
        <label>Field Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>