force-app/main/default/objects/copadoconnect__FieldMapping__c/fields/copadoconnect__Direction__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Direction__c</fullName>
    <formula>IF( copadoconnect__Inbound__c &amp;&amp;  copadoconnect__Outbound__c , &quot;Bidirectional&quot;, IF( copadoconnect__Inbound__c, &quot;Inbound&quot;, IF( copadoconnect__Outbound__c, &quot;Outbound&quot;, &quot;&quot;)))</formula>
    <label>Direction</label>
    <type>Text</type>
</CustomField>