force-app/main/default/objects/copadoconnect__FieldMapping__c/fields/copadoconnect__External_Object__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__External_Object__c</fullName>
    <formula>copadoconnect__Object_Mapping__r.copadoconnect__External_Object_Name__c</formula>
    <label>Provider Object</label>
    <type>Text</type>
</CustomField>