force-app/main/default/objects/copadoconnect__FieldMapping__c/fields/copadoconnect__External_Object_Record_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__External_Object_Record_Type_Label__c</fullName>
    <formula>copadoconnect__Object_Mapping__r.copadoconnect__External_Object_Record_Type_Label__c</formula>
    <label>Provider Type</label>
    <type>Text</type>
</CustomField>