force-app/main/default/objects/copadoconnect__FieldMapping__c/fields/copadoconnect__Inbound__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Inbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inbound</label>
    <type>Checkbox</type>
</CustomField>