force-app/main/default/objects/copadoconnect__FieldMapping__c/fields/copadoconnect__Object_Mapping__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Object_Mapping__c</fullName>
    <label>Object Mapping</label>
    <referenceTo>copadoconnect__ObjectMapping__c</referenceTo>
    <relationshipLabel>Field Mappings</relationshipLabel>
    <relationshipName>Field_Mappings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>