force-app/main/default/objects/copadoconnect__FieldMapping__c/fields/copadoconnect__Outbound__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Outbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outbound</label>
    <type>Checkbox</type>
</CustomField>