force-app/main/default/objects/copadoconnect__FieldMapping__c/fields/copadoconnect__Salesforce_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Salesforce_Field_Name__c</fullName>
    <label>Copado Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>