force-app/main/default/objects/copadoconnect__FieldMapping__c/fields/copadoconnect__Salesforce_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Salesforce_Field_Type__c</fullName>
    <label>Copado Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>