force-app/main/default/objects/copadoconnect__FieldMapping__c/fields/copadoconnect__Salesforce_Object__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Salesforce_Object__c</fullName>
    <formula>copadoconnect__Object_Mapping__r.copadoconnect__Salesforce_Object_Name__c</formula>
    <label>Copado Object</label>
    <type>Text</type>
</CustomField>