force-app/main/default/objects/copadoconnect__FieldMapping__c/fields/copadoconnect__Salesforce_Object_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Salesforce_Object_Record_Type__c</fullName>
    <formula>copadoconnect__Object_Mapping__r.copadoconnect__Salesforce_Object_Record_Type__c</formula>
    <label>Copado Record Type</label>
    <type>Text</type>
</CustomField>